--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         </div>
 
         <div class="down-arrows-icon">
-            <img src="C:\Users\LaPope Tech\Downloads\images\down-arrows.png">
+            <img src="down-filled-triangular-arrow.png">
         </div>
 
         
-
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <section class="hero">
+            <div class="hero-content">
+                <h3>Check My Student ID or place name</h3>
+                <form>
+                    <input type="text" placeholder="Enter your Student ID or place name">
+                    <button type="submit">Search</button>
+                </form>
+            </div>
+        </section>
     </header>
     <!-- Rest of your website content goes here -->
 </body>
