--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         </div>
 
         
-        <section class="hero">
-            <div class="hero-content">
-                <h3>Check My Student ID or place name</h3>
+        <section class="form">
                 <form>
                     <input type="text" placeholder="Enter your Student ID or place name">
                     <button type="submit">Search</button>
