--- a/index.html
+++ b/index.html
@@ -16,13 +16,19 @@
             <img src="down-filled-triangular-arrow.png">
         </div>
 
-        
+        <div>
         <section class="form">
                 <form>
                     <input type="text" placeholder="Enter your Student ID or place name">
                     <button type="submit">Search</button>
                 </form>
             </div>
+            <div>
+                <section class="form">
+                        <form>
+                            <input type="text" placeholder="ZUR000125U9V Lists">
+                        </form>
+                    </div>
         </section>
     </header>
     <!-- Rest of your website content goes here -->
