--- a/index.html
+++ b/index.html
@@ -29,8 +29,43 @@
                             <input type="text" placeholder="ZUR000125U9V Lists">
                         </form>
                     </div>
+                    div>
+                <section class="form">
+                        <form>
+                            <input type="text" placeholder="ZUR000125U9V Maps">
+                        </form>
+                    </div>
+                    div>
+                <section class="form">
+                        <form>
+                            <input type="text" placeholder="Nearest ZUR000125U9V">
+                        </form>
+                    </div>
+                    div>
+                <section class="form">
+                        <form>
+                            <input type="text" placeholder="ZUR000125U9V Lottery">
+                        </form>
+                    </div>
+                    div>
+                <section class="form">
+                        <form>
+                            <input type="text" placeholder="Help and Information">
+                        </form>
+                    </div>
         </section>
     </header>
-    <!-- Rest of your website content goes here -->
+
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Check My Student ID ZUR000125U9V</h1>
+            <form>
+                <input type="text" placeholder="Search for a ZUR000125U9V or place your name">
+                <button type="submit">Search</button>
+                <p>Or use your device's geolocation service to find ZUR000125U9V near you</p>
+                <button type="submit">Locate Me!</button>
+            </form>
+        </div>
+    </section>
 </body>
 </html>
