--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
             </div>
 
                 <div class="topnav">
-                    <ul>
-                        <li class="active"><a href="#">ZUR000125U9V Lists</a></li>
-                        <li><a href="#">ZUR000125U9V Maps</a></li>
-                        <li><a href="#">Nearest ZUR000125U9V</a></li> 
-                        <li><a href="#">ZUR000125U9V Lottery</a></li>
-                        <li><a href="#">Help and Information</a></li>
-                    </ul>
+                    <ul class="active"><a href="#">ZUR000125U9V Lists</a></ul>
+                        <ul><a href="#">ZUR000125U9V Maps</a></ul>
+                        <ul><a href="#">Nearest ZUR000125U9V</a></ul> 
+                        <ul><a href="#">ZUR000125U9V Lottery</a></ul>
+                        <ul><a href="#">Help and Information</a></ul>
+                </div>
         
         </section>
     </header>
