--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <img src="down-filled-triangular-arrow.png">
         </div>
 
-        <div>
-        <section class="form">
+        <div class="form">
                 <form>
                     <input type="text" placeholder="Enter your Student ID or place name">
                     <button type="submit">Search</button>
