--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
 </head>
 <body>
     <header>
@@ -24,11 +25,11 @@
             </div>
 
                 <div class="topnav">
-                    <ul class="active"><a href="#">ZUR000125U9V Lists</a></ul>
-                        <ul><a href="#">ZUR000125U9V Maps</a></ul>
+                    <ul class="active"><a href="#"><i class="fa-solid fa-caret-down"></i>ZUR000125U9V Lists</a></ul>
+                        <ul><a href="#"><i class="fa-solid fa-caret-down"></i>ZUR000125U9V Maps</a></ul>
                         <ul><a href="#">Nearest ZUR000125U9V</a></ul> 
                         <ul><a href="#">ZUR000125U9V Lottery</a></ul>
-                        <ul><a href="#">Help and Information</a></ul>
+                        <ul><a href="#"><i class="fa-solid fa-caret-down"></i>Help and Information</a></ul>
                 </div>
         
         </section>
