--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
             </div>
 
                 <div class="topnav">
-                    <ul class="active"><a href="#"><i class="fa-solid fa-caret-down"></i>ZUR000125U9V Lists</a></ul>
-                        <ul><a href="#"><i class="fa-solid fa-caret-down"></i>ZUR000125U9V Maps</a></ul>
-                        <ul><a href="#">Nearest ZUR000125U9V</a></ul> 
-                        <ul><a href="#">ZUR000125U9V Lottery</a></ul>
-                        <ul><a href="#"><i class="fa-solid fa-caret-down"></i>Help and Information</a></ul>
-                </div>
+                    <ul>
+                    <li class="active"><a href="#"><i class="fa-solid fa-caret-down"></i>ZUR000125U9V Lists</a></li>
+                        <li><a href="#"><i class="fa-solid fa-caret-down"></i>ZUR000125U9V Maps</a></li>
+                        <li><a href="#">Nearest ZUR000125U9V</a></li> 
+                        <li><a href="#">ZUR000125U9V Lottery</a></li>
+                        <li><a href="#"><i class="fa-solid fa-caret-down"></i>Help and Information</a></li>
+                    </ul>
+                    </div>
         
         </section>
     </header>
