--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Nearest ZUR000125U9V</a></li>
-                        <li><a href="#">StudentID ZUR000125U9V</a></li>
+                        <li><a href="#">ZUR000125U9V Lottery</a></li>
                     </ul>
                 </div>
             </div>
